--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p>
-	Hello, my name is Mohammad Rashedul Islam, I am learning git.
+	Hello, my name is Mohammad Rashedul Islam, I am learning git. I am really enjoying it!.
     </p>
   </body>
 </html>
